23 August 2006: Wouter
	- Fixed % by 0 exception in the bugfix #139.

22 August 2006: Wouter
	- version number to 3.0.0 in preparation for release.
	- Bug #139: resync stats to whole period. Fixed.

21 August 2006: Wouter
	- check for error in ftruncate call.
	- replaced fwrite call with write_data call from util that does
	  error checking.

15 August 2006: Wouter
	- removed unused struct nsd.named8_stats variable.
	- Bug #138: nsd aborts trying to bind all interfaces if ip6 is not
	  enabled, instead it will fallback to ip4.

14 August 2006: Wouter
	- Added test for rollback of an IXFR transfer by xfrd.
	- Added test for reload timeout in xfrd, the reload does happen after
	  a while, but not immediately.
	- Test that makes xfrd connect to ip6 address.
	- Test that overloads the number of tcp connections in xfrd,
	  simulating a slow master, so that zones have to queue up to get it.
	- code coverage is now 2514 of 10636 uncovered. Still a lot uncovered.
	- ixfr queries return NOT_IMPL errors.

11 August 2006: Wouter
	- srandom to init random() in xfrd based on PID and time.
	- improved usage() information to be more helpful, and with version.
	- in makedist.sh, flex and bison called like in Makefile.
	- test for tcp underrun and overrun of the buffer.

10 August 2006: Wouter
	- added more tests to increase code coverage of testset.
	- moved acl parsing code from configparser.c to options.c to help
	  unit testing.
	- nsd-checkconf echod wrong difffile filename with -v.
	- nsd-patch can now be used with -f to force printing of all RRs.
	- TYPE_NULL crashed NSD when it printed it, arg was ZF_DNAME,
	  now ZF_UNKNOWN.
	- unknown rr test was faulty on input, the length was in nibbles
	  not in octets, but rfc specifies octets for unknown rrs.
	  NSD does not look at the length, and prints the length correctly.
	- added type NXT to the rr-test for weird RRs.
	- added printing test to rr-test, ipseckey and unknown-rr tests.